# Machine-Learning-Assignment

./: Bronnen.txt  README.md
.github/workflows/: tests.yml
Program/: .~lock.mlp.csv#  LSTM_grafieken.xlsx  MLP_grafieken.xlsx  RNN_grafieken.xlsx  lstm.csv  main.py  mlp.csv  pyproject.toml  requirements.txt  rnn.csv  rnn_copy.csv  rnn_copy_2.csv  setup.cfg  test.py
Program/resources/: TrainingData.csv  testingData.csv
Program/src/: file_load.py  lstm.csv  main.py  mlp.csv
Program/src/models/: decision_tree.py  long_short_term_memory.py  multilayer_perceptron.py  naive_bayes_classifier.py  recurrent_neural_network.py  support_vector_machine.py
Program/tests/: test_file_load.py  test_program.py
Program/tests/models/: test_support_vector_machine.py
