[metadata]
name = Program
version = 0.1.0
author = Thibo De Belie, Vince Driesen, Daan Hollands
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    pytest
    numpy
    pandas
    matplotlib
    scikit-learn

[options.packages.find]
where = src
